fix overlapping nav on archive pages

--- a/assets/scss/partials/_navigation.scss
+++ b/assets/scss/partials/_navigation.scss
@@ -75,3 +75,8 @@ Author URI: http://juxprose.com
 
 		}
 	}
+
+	.navigation-paging {
+		position: relative;
+		bottom: 30px;
+	}
